force-app/main/default/objects/Battle_Station__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Battle Stations</relationshipLabel>
    <relationshipName>Battle_Stations</relationshipName>
    <type>Lookup</type>
</CustomField>