force-app/main/default/objects/Battle_Station__c/fields/money__c.field-meta.xml
<CustomField>
    <fullName>money__c</fullName>
    <label>money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>