force-app/main/default/objects/Battle_Station__c/fields/Multi__c.field-meta.xml
<CustomField>
    <fullName>Multi__c</fullName>
    <label>Pat on the back</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Project_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Excellant</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>