force-app/main/default/objects/Battle_Station__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>IF( Crew_Members__c &gt; 100, &apos;Big Project&apos;, &apos;Small Project&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <type>Text</type>
</CustomField>