force-app/main/default/objects/Battle_Station__c/fields/Suggestion_connect__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_connect__c</fullName>
    <label>Suggestion connect</label>
    <summarizedField>Resource__c.Quantity__c</summarizedField>
    <summaryForeignKey>Resource__c.Battle_Station__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>